fix: adjust position of scroll to top button for better visibility

--- a/src/components/visual/scrollToTopButton/ScrollToTopBtn.module.css
+++ b/src/components/visual/scrollToTopButton/ScrollToTopBtn.module.css
@@ -1,7 +1,7 @@
 .scrollButton {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 1.5rem;
+    right: 1.5rem;
     width: 1.5rem;
     height: 1.3rem;
     background-color: var(--primary-white);
